--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="col-12">
           <div class="cookie">
             <p>Cookie Clicker</p>
-            <img class="cookiepic" src="src/imgs/cookie.png" alt="cookie">
+            <img class="cookiepic" src="src/imgs/Cookie.png" alt="cookie">
             <audio id="audio" src="src/imgs/zapsplat_multimedia_click_001_19367.mp3" ></audio>
           </div>
         </div>
