--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <button type="button" class="btn btn-dark" onClick="load()">Load</button>
         </div>
       </div>
+      <hr>
       <div class="row">
         <!--Upgrades-->
         <div class="col-12">
@@ -47,7 +48,7 @@
         </div>
         <!--Autoclicker upgrade-->
         <div class="col-5">
-          <p class="resize2 italic">Buy 1 Autoclicker-</p>
+          <p class="resize3 italic">Buy 1 Autoclicker-</p>
         </div>
         <!--Buy autoclicker button-->
         <div class="col-2">
@@ -55,23 +56,23 @@
         </div>
         <!--Cost/Amount autoclickers-->
         <div class="col-5">
-          <p class="CostAutoClick resize2"> Cost 12 Cookies</p>
-          <p class="amountAutoClick resize2">You Own 0 Autoclickers</p>
+          <p class="CostAutoClick resize3"> Cost 12 Cookies</p>
+          <p class="amountAutoClick resize3">You Own 0 Autoclickers</p>
         </div>
       </div>
       <div class="row">
         <!--Farm upgrade-->
-        <div class="col-5">
-          <p class="resize2 italic">Buy 1 Farm-</p>
+        <div class="col-5 topmargin">
+          <p class="resize3 italic">Buy 1 Farm-</p>
         </div>
         <!--Buy farm button-->
-        <div class="col-2">
-          <button onClick="buyFarm()"><img src="src/imgs/farm.png" class="farm"></button>
+        <div class="col-2 topmargin">
+          <button class="autoclick" onClick="buyFarm()"><img src="src/imgs/farm.png" class="farm"></button>
         </div>
         <!--Cost/Amount farms-->
-        <div class="col-5">
-          <p class="costFarm resize2">Cost 15 Cookies</p>
-          <p class="amountFarms resize2">You Own 0 Farms</p>
+        <div class="col-5 topmargin">
+          <p class="costFarm resize3">Cost 15 Cookies</p>
+          <p class="amountFarms resize3">You Own 0 Farms</p>
         </div>
       </div>
     </div>
