Changed farm values and added c/s descriptions

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <!--Autoclicker upgrade-->
         <div class="col-5">
           <p class="resize3 italic">Buy 1 Autoclicker-</p>
+          <p class="resize3 italic">1 Cookie/Second Each</p>
         </div>
         <!--Buy autoclicker button-->
         <div class="col-2">
@@ -60,10 +61,12 @@
           <p class="amountAutoClick resize3">You Own 0 Autoclickers</p>
         </div>
       </div>
+
       <div class="row">
         <!--Farm upgrade-->
         <div class="col-5 topmargin">
           <p class="resize3 italic">Buy 1 Farm-</p>
+          <p class="resize3 italic">5 Cookie/Second Each</p>
         </div>
         <!--Buy farm button-->
         <div class="col-2 topmargin">
@@ -71,7 +74,7 @@
         </div>
         <!--Cost/Amount farms-->
         <div class="col-5 topmargin">
-          <p class="costFarm resize3">Cost 15 Cookies</p>
+          <p class="costFarm resize3">Cost 45 Cookies</p>
           <p class="amountFarms resize3">You Own 0 Farms</p>
         </div>
       </div>
