Changed hardcoded values into array

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!--Buy autoclicker button-->
         <div class="col-2">
-            <button class="autoclick" onClick="buyAutoClick()"><img src="src/imgs/pointer.jpg" class="pointer"></button>
+            <button class="autoclick" onClick="buy(0)"><img src="src/imgs/pointer.jpg" class="pointer"></button>
         </div>
         <!--Cost/Amount autoclickers-->
         <div class="col-5">
@@ -85,7 +85,7 @@
 
         <!--Buy farm button-->
         <div class="col-2 topmargin">
-          <button class="autoclick" onClick="buyFarm()"><img src="src/imgs/farm.png" class="farm"></button>
+          <button class="autoclick" onClick="buy(1)"><img src="src/imgs/farm.png" class="farm"></button>
         </div>
 
         <!--Cost/Amount farms-->
