Interaction with HTML no longer hardcoded

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <div class="col-2">
             <button class="autoclick" onClick="buy(0)"><img src="src/imgs/pointer.jpg" class="pointer"></button>
         </div>
-        <!--Cost/Amount autoclickers-->
+        <!--Cost/Amount autoclickers initial values-->
         <div class="col-5">
-          <p class="CostAutoClick resize3"> Cost 12 Cookies</p>
-          <p class="amountAutoClick resize3">You Own 0 Autoclickers</p>
+          <p class="costClickers resize3"> Cost 12 Cookies</p>
+          <p class="amountClickers resize3">You Own 0 Autoclickers</p>
         </div>
       </div>
 
@@ -88,10 +88,10 @@
           <button class="autoclick" onClick="buy(1)"><img src="src/imgs/farm.png" class="farm"></button>
         </div>
 
-        <!--Cost/Amount farms-->
+        <!--Cost/Amount farms initial values-->
         <div class="col-5 topmargin">
-          <p class="costFarm resize3">Cost 45 Cookies</p>
-          <p class="amountFarms resize3">You Own 0 Farms</p>
+          <p class="costClickers resize3">Cost 45 Cookies</p>
+          <p class="amountClickers resize3">You Own 0 Farms</p>
         </div>
       </div>
 
