Added third clicker (Factory)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!--Buy autoclicker button-->
         <div class="col-2">
-            <button class="autoclick" onClick="buy(0)"><img src="src/imgs/pointer.jpg" class="pointer"></button>
+            <button class="iconBackground" onClick="buy(0)"><img src="src/imgs/pointer.jpg" class="icon"></button>
         </div>
         <!--Cost/Amount autoclickers initial values-->
         <div class="col-5">
@@ -85,13 +85,32 @@
 
         <!--Buy farm button-->
         <div class="col-2 topmargin">
-          <button class="autoclick" onClick="buy(1)"><img src="src/imgs/farm.png" class="farm"></button>
+          <button class="iconBackground" onClick="buy(1)"><img src="src/imgs/farm.png" class="icon"></button>
         </div>
 
         <!--Cost/Amount farms initial values-->
         <div class="col-5 topmargin">
           <p class="costClickers resize3">Cost 45 Cookies</p>
           <p class="amountClickers resize3">You Own 0 Farms</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <!--Factory upgrade-->
+        <div class="col-5 topmargin">
+          <p class="resize3 italic">Buy 1 Factory-</p>
+          <p class="resize3 italic">20 Cookie/Second Each</p>
+        </div>
+
+        <!--Buy factory button-->
+        <div class="col-2 topmargin">
+          <button class="iconBackground" onClick="buy(2)"><img src="src/imgs/factory.png" class="icon"></button>
+        </div>
+
+        <!--Cost/Amount factory initial values-->
+        <div class="col-5 topmargin">
+          <p class="costClickers resize3">Cost 175 Cookies</p>
+          <p class="amountClickers resize3">You Own 0 Factories</p>
         </div>
       </div>
 
