Moved and changed image files

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="col-12">
           <div class="cookie">
             <p>Cookie Clicker</p>
-            <img class="cookiepic" src="src/imgs/Cookie.png" alt="cookie">
-            <audio id="audio" src="src/imgs/zapsplat_multimedia_click_001_19367.mp3" ></audio>
+            <img class="cookiepic" src="resources/Cookie.png" alt="cookie">
+            <audio id="audio" src="resources/zapsplat_multimedia_click_001_19367.mp3" ></audio>
           </div>
         </div>
 
@@ -67,7 +67,7 @@
 
         <!--Buy autoclicker button-->
         <div class="col-2">
-            <button class="iconBackground" onClick="buy(0)"><img src="src/imgs/pointer.jpg" class="icon"></button>
+            <button class="iconBackground" onClick="buy(0)"><img src="resources/pointer.png" class="icon"></button>
         </div>
         <!--Cost/Amount autoclickers initial values-->
         <div class="col-5">
@@ -85,7 +85,7 @@
 
         <!--Buy farm button-->
         <div class="col-2 topmargin">
-          <button class="iconBackground" onClick="buy(1)"><img src="src/imgs/farm.png" class="icon"></button>
+          <button class="iconBackground" onClick="buy(1)"><img src="resources/farm.png" class="icon"></button>
         </div>
 
         <!--Cost/Amount farms initial values-->
@@ -104,7 +104,7 @@
 
         <!--Buy factory button-->
         <div class="col-2 topmargin">
-          <button class="iconBackground" onClick="buy(2)"><img src="src/imgs/factory.png" class="icon"></button>
+          <button class="iconBackground" onClick="buy(2)"><img src="resources/factory.png" class="icon"></button>
         </div>
 
         <!--Cost/Amount factory initial values-->
